# ZK-Compuation-Proof

./: README.md
hello-world-7/host/: Cargo.toml
hello-world-7/host/src/: main.rs
hello-world-7/methods/guest/: Cargo.toml
hello-world-7/methods/guest/src/: main.rs
tfhe-rs-main/tfhe/src/core_crypto/algorithms/: lwe_encryption.rs
