[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.3" }
tfhe = { version = "0.8.4", features = [ "boolean", "shortint", "pbs-stats", "integer", "aarch64-unix" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bincode = "1.3"
