[package]
name = "hello_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.3", default-features = false, features = ['std'] }
#risc0-zkvm = { version = "1.1.3" }
#serde = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = "1.3"
#rayon = "1.7"
tfhe = { path = "/Users/farhadnouri/Desktop/IEEE_Globecom/tfhe-rs-main/tfhe" }

#tfhe = { version = "0.8.4", features = [ "boolean", "shortint", "pbs-stats", "integer", "aarch64-unix" ] }
concrete-ntt ={ version = "0.2.0"}


